  'zend_error'). (Dmitry)
- Fixed bug #33150 (shtool: insecure temporary file creation). (Jani)
- Fixed bug #33136 (method offsetSet in class extended from ArrayObject crash 
  PHP). (Marcus)
- Fixed bug #31256 (PHP_EVAL_LIBLINE configure macro does not handle -pthread).
  (Jani)
- Fixed bug #31213 (Sideeffects caused by fix of bug #29493). (Dmitry)
- Fixed bug #31054 (safe_mode & open_basedir checks only check first 
  include_path value). (Ilia)
- Fixed bug #29683 (headers_list() returns empty array). (Tony)
- Fixed bug #28355 (glob wont error if dir is not readable). (Hartmut)
- Fixed bugs #20382, #28024, #30532, #32086, #32270, #32555, #32588, #33056
  (strtotime() related bugs). (Derick)

10 Jun 2005, PHP 5.1 Beta 1
- Upgraded PCRE library to version 5.0. (Andrei)
- Removed php_check_syntax() function which never worked properly. (Ilia)
- Removed garbage manager in Zend Engine which results in more aggressive
  freeing of data. (Dmitry, Andi)
- Moved extensions to PECL:
  . ext/cpdf        (Tony, Derick)
  . ext/dio         (Jani, Derick)
  . ext/fam         (Jani, Derick)
  . ext/ingres_ii   (Jani, Derick)
  . ext/mnogosearch (Jani, Derick)
  . ext/w32api      (Jani, Derick)
  . ext/yp          (Jani, Derick)
- Changed sha1_file() and md5_file() functions to use streams instead of
  low level IO. (Uwe)
- Changed abstract private methods to be not allowed anymore. (Stas)
- Changed stream_filter_(ap|pre)pend() to return resource. (Sara)
- Changed mysqli_exception and sqlite_exception to use RuntimeException as base 
  if SPL extension is present. (Georg, Marcus)
- Improved interactive mode of PHP CLI (php -a). (Johannes, Marcus)
- Improved performance of:
  . general execution/compilation. (Andi, Thies, Sterling, Dmitry, Marcus)
  . switch() statement. (Dmitry)
  . several array functions. (Marcus)
  . virtual path handling by adding a realpath() cache. (Andi)
  . variable fetches. (Andi)
  . magic method invocations. (Marcus)